# swipe-fate

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  CLAUDE.md  MANIFEST.in  Makefile  README.md  business.json  component_system.py  core_engine.py  main.py  pyproject.toml  resource_loader.py  run_polysim.py  run_swipe_fate.py  setup.py  swipe_fate.py  test_flet_path.py  test_props.py  test_scroll.py  ui_manager.py
.github/workflows/: ci.yml
configs/: business.json  space_exploration.json
docs/: README.md  design.md  game-config.md  implementation_plan.md  implementation_status.md  index.md  roadmap.md  specification.md  technical.md
docs/adr/: 0000-adr-template.md  0001-package-renaming-project-structure.md  0002-configuration-structure-game-data-model.md  0003-theming-system-asset-management.md  0004-visual-filters-implementation.md  0005-user-interface-navigation-patterns.md  0006-game-selection-carousel-vs-grid.md  0007-achievement-statistics-system.md  0008-multi-verse-concept-design.md  0009-virtual-card-display-design.md
new_src/swipe_fate/: main.py
new_src/swipe_fate/ui/: __init__.py
src/polysim/: main.py
src/polysim/core/: core_engine.py  event_manager.py  game_state.py  rule_engine.py
src/polysim/ui/: ui_manager.py
src/swipe_fate/: __init__.py  main.py  resource_loader.py
src/swipe_fate/core/: component_system.py  core_engine.py  event.py  event_manager.py  game_state.py  rule_engine.py
src/swipe_fate/ui/: decision_card.py  modern_card.py  resource_display.py  ui_manager.py
swipe_fate/: __init__.py  __main__.py
swipe_fate/config/: default_game.json
swipe_fate/models/: config.py  game_state.py  resource.py
swipe_fate/services/: asset_manager.py  config_loader.py  game_logic.py  image_processor.py
swipe_fate/ui/: app.py  game_screen.py  settings_screen.py  title_screen.py
swipe_fate/ui/components/: card_display.py  resource_bar.py
swipe_verse/: __init__.py  __main__.py  cli_launcher.py  main.py
swipe_verse/cli/: cli_app.py
swipe_verse/config/: business_game.json  kingdom_game.json  tutorial_game.json
swipe_verse/models/: config.py  game_state.py
swipe_verse/scenarios/: __init__.py  business_game.json  kingdom_game.json  tutorial_game.json
swipe_verse/services/: asset_manager.py  config_loader.py  game_history.py  game_logic.py  image_processor.py
swipe_verse/tui/: tui_app.py
swipe_verse/ui/: achievements_screen.py  app.py  game_screen.py  settings_screen.py  title_screen.py
swipe_verse/ui/components/: card_display.py  (+2 more)
tests/: README.md  __init__.py  conftest.py  test_asset_manager.py  test_card.py  test_config_loader.py  test_game_history.py  test_game_logic.py  test_game_state.py  test_image_processor.py  test_main.py  test_resource.py  test_resource_loader.py  test_ui_manager.py
tests/ui/: __init__.py  test_achievements_screen.py  test_app.py  test_card_display.py  test_game_components.py  test_game_screen.py  test_game_selector.py  test_resource_bar.py  test_settings_screen.py  test_title_screen.py
tools/: README.md  build.py  minimal_test.py  test_flet.py  test_flet_module.py  test_flet_path.py  test_props.py  test_scroll.py
