[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swipe_fate"
version = "0.1.0"
description = "SwipeFate: A versatile simulation game built with Flet"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Michael Borck"}
]
dependencies = [
    "flet>=0.27.0",  # Using latest version for best features and performance
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pytest>=7.4.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.1.0",
]

# We'll use the swipe_fate.py script directly instead of an entry point

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "B", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"